--- a/index.html
+++ b/index.html
@@ -253,10 +253,7 @@
                             <span>PHP</span>
                             <span>MySQL</span>
                         </div>
-                        <div class="project-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
-                        </div>
+                      
                     </div>
                 </div>
 
@@ -273,8 +270,8 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="#" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
+                            <a href="https://rohinipophale.netlify.app/" target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://github.com/RohiniPophale15/Portfolio" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
                 </div>
@@ -293,7 +290,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/RohiniPophale15/To-Do-List" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
+                            
                         </div>
                     </div>
                 </div>
