--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         </div>
                         <div class="project-links">
                             <a href="https://github.com/RohiniPophale15/CDACPROJECT/tree/main" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="#" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
+                          
                         </div>
                     </div>
                 </div>
@@ -270,8 +270,8 @@
                             <span>JavaScript</span>
                         </div>
                         <div class="project-links">
-                            <a href="https://rohinipophale.netlify.app/" target="_blank"><i class="fab fa-github"></i> Code</a>
-                            <a href="https://github.com/RohiniPophale15/Portfolio" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
+                            <a href="https://github.com/RohiniPophale15/Portfolio"target="_blank"><i class="fab fa-github"></i> Code</a>
+                            <a href="https://rohinipophale.netlify.app/" target="_blank"><i class="fas fa-external-link-alt"></i> Live</a>
                         </div>
                     </div>
                 </div>
